--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -21,7 +21,7 @@
      for different hardware and product builds. -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
-    <integer name="config_screenOnAnimation">0</integer>
+    <!-- <integer name="config_screenOnAnimation">0</integer> -->
 
     <string-array translatable="false" name="config_tether_usb_regexs">
         <item>"usb0"</item>
@@ -103,11 +103,11 @@
         <item>0</item>
     </integer-array>
 
-    <!-- Component name of the service providing network location support. -->
-    <string name="config_networkLocationProvider">com.google.android.location.NetworkLocationProvider</string>
+    <!-- Component name of the service providing network location support. 
+    <string name="config_networkLocationProvider">com.google.android.location.NetworkLocationProvider</string> -->
 
-    <!-- Component name of the service providing geocoder API support. -->
-    <string name="config_geocodeProvider">com.google.android.location.GeocodeProvider</string>
+    <!-- Component name of the service providing geocoder API support. 
+    <string name="config_geocodeProvider">com.google.android.location.GeocodeProvider</string> -->
 
     <!-- Boolean indicating if current platform supports bluetooth SCO for off call
     use cases -->
@@ -132,8 +132,8 @@
              8 - Search
             16 - App switch
          For example, a device with Home, Back, Menu, and Search keys would set this
-         config to 15. -->
+         config to 15. 
 
-    <integer name="config_deviceHardwareKeys">7</integer>
+    <integer name="config_deviceHardwareKeys">7</integer> -->
 
 </resources>
