--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -21,7 +21,14 @@
      for different hardware and product builds. -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
-    <!-- <integer name="config_screenOnAnimation">0</integer> -->
+    <integer name="config_screenOnAnimation">250</integer>
+
+    <!-- True will enable the electron beam screen-off animation. -->
+    <bool name="config_screenOffAnimation">true</bool>
+
+    <!-- Timeout in MS for how long you have to long-press the back key to
+         kill the foreground app. -->
+    <integer name="config_backKillTimeout">1000</integer>
 
     <string-array translatable="false" name="config_tether_usb_regexs">
         <item>"usb0"</item>
@@ -103,11 +110,11 @@
         <item>0</item>
     </integer-array>
 
-    <!-- Component name of the service providing network location support. 
-    <string name="config_networkLocationProvider">com.google.android.location.NetworkLocationProvider</string> -->
+    <!-- Component name of the service providing network location support. -->
+    <string name="config_networkLocationProviderPackageName">com.google.android.location.NetworkLocationProvider</string>
 
-    <!-- Component name of the service providing geocoder API support. 
-    <string name="config_geocodeProvider">com.google.android.location.GeocodeProvider</string> -->
+    <!-- Component name of the service providing geocoder API support. -->
+    <string name="config_geocodeProviderPackageName">com.google.android.location.GeocodeProvider</string>
 
     <!-- Boolean indicating if current platform supports bluetooth SCO for off call
     use cases -->
